--- a/appdata/pyddns/pyddns/templates/dash.html
+++ b/appdata/pyddns/pyddns/templates/dash.html
@@ -202,7 +202,7 @@
 
 
 	$(function() {
-		$.getJSON("https://api.ipify.org?format=jsonp&callback=?",
+		$.getJSON("https://api64.ipify.org?format=jsonp&callback=?",
 			function(json) {
 				$('.my_ip').html(json.ip);
 				ip=json.ip;
